# abeeyes

./: .clang-format  .gitignore  AbeEyesConfig.h.in  AppleClang_Darwin.cmake  CMakeLists.txt  GNU_Linux.cmake  GNU_Windows - Copy.cmake  GNU_Windows.cmake  LICENSE  MSVC_Windows.cmake  README.md
src/: Eyeball.cpp  Eyeball.h  MouseAttrs.h  System.cpp  System.h  Timer.cpp  Timer.h  main.cpp
src/graphics/: AlignTypes.h  Grob.cpp  Grob.h  LoopType.h  Resources.cpp  Resources.h  Sprite.cpp  Sprite.h  SpriteList.cpp  SpriteList.h  Texture.cpp  Texture.h
src/platform/: AbstractSystem.cpp  AbstractSystem.h  LinuxSystem.cpp  LinuxSystem.h  MacSystem.cpp  MacSystem.h  WinSystem.cpp  WinSystem.h
src/states/: BlinkState.cpp  BlinkState.h  EyeState.cpp  EyeState.h  LookState.cpp  LookState.h  StateType.h
